Fix for bug #10176: changed ConstructFrameByDisplayType() to be smarter when handling relatively positioned elements